# cpp-sample-prep

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  architecture.md  setup.md  spec.md
assets/macos/: SamplePrep.icns
cmake/: Info.plist.in  LaunchSamplePrep.in  PrepareMacOSRelease.cmake.in  ReleaseReadme.txt  StageMacOSBundle.cmake.in
scripts/macos/: sign_and_notarize.sh
src/: main.cpp
src/audio/: audio_conversion.cpp  audio_conversion.hpp  audio_file_info.cpp  audio_file_info.hpp
src/core/: conversion_settings.cpp  conversion_settings.hpp  input_preview.cpp  input_preview.hpp  log_store.cpp  log_store.hpp  run_conversion.cpp  run_conversion.hpp
src/util/: native_drop_target.cpp  native_drop_target.hpp  native_drop_target_mac.mm  native_file_dialog.cpp  native_file_dialog.hpp  path_utils.cpp  path_utils.hpp  temp_file.cpp  temp_file.hpp  url_launcher.cpp  url_launcher.hpp
tests/: audio_converter_tests.cpp  sampleprep_tests.cpp
ui/: app-window.slint
